--- a/config/boards/shields/NesPad/NesPad.conf
+++ b/config/boards/shields/NesPad/NesPad.conf
@@ -21,14 +21,8 @@ CONFIG_BT_SETTINGS=y
 
 # Enable macros
 #CONFIG_ZMK_MACROS=y
-# Enable UART for ZMK Studio
-CONFIG_SERIAL=y
-CONFIG_UART_CONSOLE=n  # Disable console output via UART
-CONFIG_ZMK_STUDIO=y    # Enable ZMK Studio integration
+CONFIG_ZMK_STUDIO=y
 
-# Minimal UART buffer settings
-CONFIG_UART_RX_BUF_SIZE=64
-CONFIG_UART_TX_BUF_SIZE=64
 # USB configuration
 CONFIG_ZMK_USB=y
 CONFIG_USB_DEVICE_STACK=y
