--- a/config/boards/shields/NesPad/NesPad.conf
+++ b/config/boards/shields/NesPad/NesPad.conf
@@ -22,7 +22,8 @@ CONFIG_BT_SETTINGS=y
 # Enable macros
 #CONFIG_ZMK_MACROS=y
 CONFIG_ZMK_STUDIO=y
-
+CONFIG_ZMK_STUDIO_UART=y
+CONFIG_UART_CONSOLE=y
 # USB configuration
 CONFIG_ZMK_USB=y
 CONFIG_USB_DEVICE_STACK=y
