--- a/config/boards/shields/NesPad/NesPad.conf
+++ b/config/boards/shields/NesPad/NesPad.conf
@@ -31,7 +31,7 @@ CONFIG_USB_DEVICE_PRODUCT="NanoNes"
 # Enable RGB underglow and layer effects
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-CONFIG_PWM=y
+#CONFIG_PWM=y
 
 # Set RGB startup options
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
