--- a/config/boards/shields/NesPad/NesPad.conf
+++ b/config/boards/shields/NesPad/NesPad.conf
@@ -9,34 +9,30 @@ CONFIG_BT_DEVICE_APPEARANCE=961
 
 # Enable deep sleep support
 CONFIG_ZMK_SLEEP=y
-
-# The keyboard disconnects from Bluetooth.
-# Uses very little power, but it may take a few seconds to reconnect after waking.
-# 1.800.000 ms = 30 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=500000
 
 # Bluetooth bond storage
-CONFIG_SETTINGS=y
-CONFIG_BT_SETTINGS=y
+#CONFIG_SETTINGS=y
+#CONFIG_BT_SETTINGS=y
 
 # Enable macros
 #CONFIG_ZMK_MACROS=y
 CONFIG_ZMK_STUDIO=y
 
 # USB configuration
-CONFIG_ZMK_USB=y
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="NanoNes"
+#CONFIG_ZMK_USB=y
+#CONFIG_USB_DEVICE_STACK=y
+#CONFIG_USB_DEVICE_PRODUCT="NanoNes"
 
 # Enable RGB underglow and layer effects
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+#CONFIG_ZMK_RGB_UNDERGLOW=y
+#CONFIG_WS2812_STRIP=y
 #CONFIG_PWM=y
 
 # Set RGB startup options
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=150
+#CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+#CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
+#CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=150
 
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
+#CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+#CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
