--- a/build.yaml
+++ b/build.yaml
@@ -22,4 +22,5 @@ include:
   - board: nice_nano_v2
     shield: NesPad
     snippet: studio-rpc-usb-uart
+    snippet: zmk-usb-logging
     cmake-args: -DCONFIG_ZMK_STUDIO=y
