--- a/config/boards/shields/NesPad/NesPad.conf
+++ b/config/boards/shields/NesPad/NesPad.conf
@@ -4,12 +4,16 @@ CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="NesPad"
 CONFIG_BT_DEVICE_APPEARANCE=961
 
+# Use boot mode instead (if your board supports mcuboot)
+
+
 # Increase Bluetooth signal power
 # CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Enable deep sleep support
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=500000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
 
 # Bluetooth bond storage
 #CONFIG_SETTINGS=y
@@ -19,20 +23,22 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=500000
 #CONFIG_ZMK_MACROS=y
 CONFIG_ZMK_STUDIO=y
 
+
+CONFIG_I2C=y
 # USB configuration
-#CONFIG_ZMK_USB=y
+CONFIG_ZMK_USB=y
 #CONFIG_USB_DEVICE_STACK=y
-#CONFIG_USB_DEVICE_PRODUCT="NanoNes"
+CONFIG_USB_DEVICE_PRODUCT="NanoNes"
 
 # Enable RGB underglow and layer effects
-#CONFIG_ZMK_RGB_UNDERGLOW=y
-#CONFIG_WS2812_STRIP=y
-#CONFIG_PWM=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_PWM=y
 
 # Set RGB startup options
-#CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
-#CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
-#CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=150
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=150
 
-#CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
-#CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
