--- a/config/boards/shields/NesPad/NesPad.conf
+++ b/config/boards/shields/NesPad/NesPad.conf
@@ -1,12 +1,18 @@
+CONFIG_ZMK_KEYBOARD_NAME="NesPad"
 # Bluetooth configuration
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="NesPad"
 CONFIG_BT_DEVICE_APPEARANCE=961
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+#CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
+CONFIG_ZMK_USB_LOGGING=y
 # Use boot mode instead (if your board supports mcuboot)
 
-
+CONFIG_NRF_STORE_REBOOT_TYPE_GPREGRET=n
 # Increase Bluetooth signal power
 # CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
@@ -21,24 +27,30 @@ CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
 
 # Enable macros
 #CONFIG_ZMK_MACROS=y
-CONFIG_ZMK_STUDIO=y
 
 
-CONFIG_I2C=y
+#CONFIG_I2C=y
 # USB configuration
 CONFIG_ZMK_USB=y
-#CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="NanoNes"
+#CONFIG_SERIAL=y
+#CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_USB_DEVICE_PRODUCT="NesPad"
 
 # Enable RGB underglow and layer effects
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-CONFIG_PWM=y
+#CONFIG_PWM=y
 
 # Set RGB startup options
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=150
 
+
+
+
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
+
+
+CONFIG_ZMK_STUDIO=y
