--- a/config/boards/shields/NesPad/NesPad.conf
+++ b/config/boards/shields/NesPad/NesPad.conf
@@ -1,7 +1,7 @@
 CONFIG_ZMK_KEYBOARD_NAME="NesPad"
-# Bluetooth configuration
-CONFIG_NRF_STORE_REBOOT_TYPE_GPREGRET=n
 
+
+# Bluetooth configuration
 CONFIG_BT=y
 CONFIG_BT_BAS=y
 CONFIG_ZMK_BLE=y
@@ -9,20 +9,28 @@ CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="NesPad"
 CONFIG_BT_DEVICE_APPEARANCE=961
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+#CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=n
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-
-CONFIG_ZMK_SETTINGS_RESET_ON_START=n
+#7.5ms BLE polling config
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
 # Increase Bluetooth signal power
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_PHY_2M=y
+CONFIG_USB_HID_POLL_INTERVAL_MS=1
+# Mouse configuration
+CONFIG_ZMK_POINTING=y
+#CONFIG_ZMK_MOUSE=y
+
+CONFIG_ZMK_SETTINGS_RESET_ON_START=n
+
 
 # Enable deep sleep support
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=14800000
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
 
 CONFIG_ZMK_USB=y
-#CONFIG_SERIAL=y
+ #CONFIG_SERIAL=y
 #CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_USB_DEVICE_PRODUCT="NesPad"
 
@@ -30,11 +38,22 @@ CONFIG_USB_DEVICE_PRODUCT="NesPad"
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 #CONFIG_PWM=y
+# Eager debounce config settings for chatty switches
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=1
 
 # Set RGB startup options
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=150
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+#CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+
+#CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=75
+#CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=16
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=8
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=100
 
 
-CONFIG_ZMK_STUDIO=y
+#CONFIG_ZMK_STUDIO=y
+#CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_NRF_STORE_REBOOT_TYPE_GPREGRET=n
